# api-rust

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  README_CN.md  testRust.sh
api/: Cargo.toml  build.rs
api/src/: lib.rs
api/src/apic/: Makefile  note.txt  wrapper.cpp  wrapper.h
doc/: todo.md  types.md
examples/: DFSWritingWithMultiThread.rs  README_CN.md  RWDFSTable.rs  RWMemoryTable.rs  StreamingDataWriting.rs  StreamingThreadClientSubscriber.rs  any_vector.rs  blob.rs  connect.rs  constant.rs  data_forms.rs  quick_start.rs  simple.rs  subscribe.rs  symbol_vector.rs  table.rs  table_insert.rs  table_writer.rs  type_conversion.rs  vector.rs
src/: error.rs  lib.rs  main.rs
src/client/: builder.rs  mod.rs  request_info.rs  table_writer.rs
src/request/: body.rs  header.rs  mod.rs
src/response/: header.rs  mod.rs
src/stream_client/: message.rs  message_parser.rs  mod.rs  reconnect.rs  request.rs  subscriber.rs
src/types/: any.rs  array_vector.rs  basic.rs  constant.rs  decimal.rs  dictionary.rs  enums.rs  mod.rs  pair.rs  primitive.rs  scalar.rs  set.rs  table.rs  temporal.rs  vector.rs  vector_kind.rs
src/types/scalar/: decimal.rs  deserialize.rs  serialize.rs  temporal.rs
tests/: Constant_test.rs  DBConnection_test.rs  Dictionary_test.rs  Set_test.rs  Table_test.rs  Vector_test.rs  ddb_test.rs  simple.rs  test_client.rs  test_run_function.rs  test_run_script.rs  test_stream_subscribe.rs  test_table_writer.rs  test_types_func.rs  test_upload.rs
tests/setup/: settings.rs
tests/utils/: macro_utils.rs  mod.rs
(+1 files in other folders)
